# diabetes-clinical-etl-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: data_dictionary.md  data_quality_rules.md  datasus_sources.md  epidemiological_indicators.md  etl_documentation.md  limitations.md
notebooks/: 01_exploratory_analysis.ipynb
src/app/: streamlit_app.py
src/config/: settings.py
src/data/: download_datasus_data.py  extract.py  integrate.py  load.py  pipeline.py  transform_population.py  transform_sih.py  transform_sim.py  validate.py
src/indicators/: epidemiological_indicators.py
src/quality/: quality_checks.py  quality_report.py
src/utils/: logger.py  paths.py  text_normalization.py
tests/: test_extract.py  test_indicators.py  test_integrate.py  test_pipeline.py  test_transform_sih.py  test_transform_sim.py  test_validate.py
